--- a/node-app/public/admin/index.html
+++ b/node-app/public/admin/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="/admin/styles.a0c1aed7394fcad9632a.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/admin/runtime.js"></script><script type="text/javascript" src="/admin/polyfills.js"></script><script type="text/javascript" src="/admin/styles.js"></script><script type="text/javascript" src="/admin/vendor.js"></script><script type="text/javascript" src="/admin/main.js"></script></body>
+<script type="text/javascript" src="/admin/runtime.a5015d338734669a89cf.js"></script><script type="text/javascript" src="/admin/polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="/admin/main.a5580cf84c4d7dbbcad2.js"></script></body>
 </html>
